--- a/index 6 copy 2.html
+++ b/index 6 copy 2.html
@@ -526,7 +526,7 @@ I love you mwah mwah mwahhh.
 <audio id="whoosh" src="https://assets.mixkit.co/active_storage/sfx/2571/2571-preview.mp3"></audio>
 
 <script>
-const loverName = " Helo the love of my life 😘"; // Change this to your lover's name
+const loverName = " Helo the love of my life :P "; 
 
 const introScreen = document.getElementById("introScreen");
 const nameText = document.getElementById("nameText");
@@ -682,3 +682,4 @@ function fadeOutAndNavigate(url, duration = 600){
 
 </body>
 </html>
+
